--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
         <item>Disco turbina paletas planas con deflectores</item>
         <item>Banda helicoidal</item>
     </string-array>
+    <string-array name="spinner_Intervalos">
+        <item>30</item>
+        <item>60</item>
+        <item>120</item>
+     </string-array>
 </resources>
